incorporated newest booknlp updates